--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
+# Core Django and Web Framework
 Django==5.2.1
-django-cors-headers==4.7.0
-Pillow==11.2.1
-opencv-python==4.11.0.86
-numpy==2.2.6
-scikit-image==0.25.2 
+django-cors-headers==4.4.0
+gunicorn==22.0.0
+
+# Image Processing and AI
+Pillow==10.4.0
+opencv-python-headless==4.10.0.84
+numpy==1.23.5
+
+# RealESRGAN and Deep Learning
+basicsr==1.4.2
+realesrgan==0.3.0
+torch>=1.13.0
+torchvision>=0.14.0
+facexlib==0.3.0
+gfpgan==1.3.8
+
+# Additional Image Processing
+scikit-image==0.24.0
+imageio==2.34.2
+
+# Utilities
+requests==2.32.3
+tqdm==4.66.4
+
+# Production
+whitenoise==6.7.0
+python-dotenv==1.0.1
+
+# Monitoring and Logging
+psutil==6.0.0
+
+# Security
+cryptography>=41.0.0
+
+# Database (if switching from SQLite)
+# psycopg2-binary==2.9.7  # Uncomment for PostgreSQL 
