--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
 # Core Django and Web Framework
 Django==5.2.1
 django-cors-headers==4.4.0
-gunicorn==22.0.0
 
 # Image Processing and AI
 Pillow==10.4.0
 opencv-python-headless==4.10.0.84
 numpy==1.23.5
 
-# RealESRGAN and Deep Learning
-basicsr==1.4.2
+# AI Enhancement Models
 realesrgan==0.3.0
 torch>=1.13.0
 torchvision>=0.14.0
-facexlib==0.3.0
-gfpgan==1.3.8
+basicsr
 
-# Additional Image Processing
-scikit-image==0.24.0
-imageio==2.34.2
+# Environment Configuration
+python-dotenv==1.0.1
 
 # Utilities
 requests==2.32.3
@@ -26,13 +22,6 @@ tqdm==4.66.4
 
 # Production
 whitenoise==6.7.0
-python-dotenv==1.0.1
 
 # Monitoring and Logging
 psutil==6.0.0
-
-# Security
-cryptography>=41.0.0
-
-# Database (if switching from SQLite)
-# psycopg2-binary==2.9.7  # Uncomment for PostgreSQL 
