--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,14 @@ django-cors-headers==4.4.0
 gunicorn==22.0.0
 
 # Image Processing and AI
-Pillow==10.4.0
-opencv-python-headless==4.10.0.84
+Pillow
+opencv-python
 numpy==1.23.5
 
 # RealESRGAN and Deep Learning
-basicsr==1.4.2
 realesrgan==0.3.0
-torch>=1.13.0
-torchvision>=0.14.0
+torch==2.2.2
+torchvision==0.17.2
 facexlib==0.3.0
 gfpgan==1.3.8
 
@@ -34,5 +33,4 @@ psutil==6.0.0
 # Security
 cryptography>=41.0.0
 
-# Database (if switching from SQLite)
-# psycopg2-binary==2.9.7  # Uncomment for PostgreSQL 
+basicsr @ git+https://github.com/XPixelGroup/BasicSR@8d56e3a045f9fb3e1d8872f92ee4a4f07f886b0a
